Tidy latex formatting.

--- a/docs/user-guide/solvers/ape.tex
+++ b/docs/user-guide/solvers/ape.tex
@@ -94,9 +94,9 @@ ambient pressure.
 \end{lstlisting}
 
 Let us note that to solve efficiently this problem a discontinuous Garlerkin
-approach was used. The
-system is excited via the initial conditions putting a Gaussian pulse for pulse
-fluctuations.  Finally, it is necessary to specify the base flow using the following functions:
+approach was used. The system is excited via the initial conditions putting
+a Gaussian pulse for pulse fluctuations.  Finally, it is necessary to specify
+the base flow using the following functions:
 
 \begin{lstlisting}[style=XmlStyle]
 <FUNCTION NAME="Baseflow"> 
@@ -113,7 +113,8 @@ fluctuations.  Finally, it is necessary to specify the base flow using the follo
 </FUNCTION>
 \end{lstlisting}
 
-By default, the right hand sides $\overline{c}^2 q_c$ and $U_i$ are zero and has to be specified by an appropriate forcing.
+By default, the right hand sides $\overline{c}^2 q_c$ and $U_i$ are zero and
+has to be specified by an appropriate forcing.
 
 \subsubsection{Running the code}
 \begin{lstlisting}[style=BashInputStyle]
