Update developer guide for compressible solver
This is a combination of 7 commits.

Add governing equations

Add weak formulation

Complete the theoretical part

do nothing

Add advection and diffusion components separately

Modify according to Spencer's suggestions

Mike updates (corrections from Songzhe)

--- a/docs/developer-guide/developers-guide.tex
+++ b/docs/developer-guide/developers-guide.tex
@@ -38,6 +38,7 @@
 [thick,->,>=stealth]
 \tikzstyle{arrow1}=
 [thick,dashed,->,>=stealth]
+\usepackage{float}
 
 \usepackage{standalone}
 \usepackage{rotating}
