--- a/docs/developer-guide/solvers/DataStructure.tex
+++ b/docs/developer-guide/solvers/DataStructure.tex
@@ -304,7 +304,7 @@ yshift=-1cm]
 \draw [arrow](55,-20)--(60,-20);
 \node (text15) at (48,-20) {Inheritance};
 \draw [arrow1](55,-25)--(60,-25);
-\node (text14) at (48,-25) {Date 
+\node (text14) at (48,-25) {Data
 Footprint };
 \node (text13) at (48,-30) {Factory};
 \node (text14)
