--- a/docs/developer-guide/solvers/compressible-solver.tex
+++ b/docs/developer-guide/solvers/compressible-solver.tex
@@ -4,7 +4,7 @@
 In this chapter, we walk the reader through our 2D and 3D compressible Navier-Stokes Solver (CompressibleFlowSolver). 
 \section{Fundamental Theories of CompressibleFlowSolver}
 The governing equation systems includes continuity equation, momentum equations and energy equation. Write in conservative form 
-\begin{equation}
+\begin{equation}\label{eq1}
   \frac{\partial U}{\partial t}+
   \sum\limits_{i=1}^{d}{\frac{\partial F_{i}(U)}{\partial x_{i}}}
   =\sum\limits_{i=1}^{d}{\frac{\partial G_{i}(U,\nabla U)}{\partial x_{i}}}
@@ -37,7 +37,18 @@ Viscous flux G in i direction is
 \end{equation}
 where viscous term $\tau_{ij}=\mu(\frac{\partial u_{i}}{\partial x_{j}}+\frac{\partial u_{j}}{\partial x_{i}}-\frac{2}{3}\nabla \cdot\textbf{u}\delta_{ij})$ and heat flux $\textbf{q}=-\kappa \nabla T$
 
+In Nektar++ current compressible flow solver, DG spatial discretization is in default. Mutiply a test function $\phi$, integrate inside an element $K\in \Omega_{h}$ and sum over all the elements.
+\begin{equation}
+  \sum\limits_{K\in \Omega_{h}}{\int_{K}{\frac{\partial U}{\partial t}\phi dx}}+I_{inv}=I_{vis}
+\end{equation}
+where
 
+$$I_{inv}= \sum\limits_{K\in \Omega_{h}}{\int_{\partial K}{\sum\limits_{i=1}^{d}{\widetilde{F}_{i}(U)n_{i}\phi}}dS}-
+\sum\limits_{K\in \Omega_{h}}{\int_{K}{\sum\limits_{i=1}^{d}{F_{i}(U)\frac{\partial \phi}{\partial x_{i}}dx}}}$$
+$$I_{inv}= \sum\limits_{K\in \Omega_{h}}{\int_{\partial K}{\sum\limits_{i=1}^{d}{\widetilde{G}_{i}(U,\nabla U)n_{i}\phi}}dS}-
+\sum\limits_{K\in \Omega_{h}}{\int_{K}{\sum\limits_{i=1}^{d}{G_{i}(U,\nabla U)\frac{\partial \phi}{\partial x_{i}}dx}}}$$
+
+Various numerical advection flux $\widetilde{F}$ and diffsion flux $\widetilde{G}(U,\nabla U)$ are supported in Nektar++ CompressibleSolver.
 \clearpage
 \section{Data Structure of CompressibleFlowSolver}
    \begin{figure}
